fixed single image alignment in content

--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -3,6 +3,7 @@
 
 .single-image {
   text-align: center;
+  max-width:720px;
   img {
     max-width: 100%;
     max-height: 500px;
